Clean up javascript code.

--- a/templates/Components/Dialog/confirm-delete-dialog.html.twig
+++ b/templates/Components/Dialog/confirm-delete-dialog.html.twig
@@ -13,7 +13,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">{{ 'Close'|trans }}</button>
-            <button type="button" class="btn btn-danger" id="confirm-delete">{{ 'Delete'|trans }}</button>
+            <button type="button" class="btn btn-danger js-confirm-delete">{{ 'Delete'|trans }}</button>
         </div>
     </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
