--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,6 @@
 {% block javascripts %}
     {{ parent() }}
 
-    <!-- promise -->
+    <!-- promise - fixing incompatibility of promise with all browsers-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.auto.min.js"></script>
 {% endblock %}
