Fix error shown when validation fails.

--- a/templates/Components/Layout/crud-manage.html.twig
+++ b/templates/Components/Layout/crud-manage.html.twig
@@ -116,8 +116,7 @@
                     <i class="fa fa-pencil-alt" aria-hidden="true"></i>
                 </button>
                 <button type="button" data-backdrop="static" data-keyboard="false" class="js-entity-delete btn btn-danger btn-sm"
-                        data-id="<%= id %>" data-title="<%= title %>" data-url="<%= Routing.generate('transfer_delete', {'id': id}) %>"
-                        style="margin-left: 3px">
+                        data-id="<%= id %>" data-title="<%= title %>" style="margin-left: 3px">
                     <i class="fa-trash-alt fa" aria-hidden="true"></i>
                 </button>
             </td>
