--- a/templates/transfer/index.html.twig
+++ b/templates/transfer/index.html.twig
@@ -62,7 +62,8 @@
                 },
                 update: {
                     confirmButtonText: '{{ 'Update'|trans }}',
-                    titleText: '{{ 'Update'|trans }} {{ entity_name|trans|title }}'
+                    titleText: '{{ 'Update'|trans }} {{ entity_name|trans|title }}',
+                    toastTitleText: '{{ entity_name|trans|title }} {{ 'was updated successfully.'|trans }}'
                 },
                 delete: {
                     toastTitleText: '{{ entity_name|trans|title }} {{ 'was deleted successfully.'|trans }}'
@@ -71,7 +72,10 @@
 
             const form = new Form(swalFormOptionsText);
 
-            window.crudManager.withCreateButton(form);
+            window.crudManager.withForm(form);
+            window.crudManager.withCreateButton();
+            window.crudManager.withEditButton();
+            window.crudManager.withDeleteButton();
 
         });
     </script>
