--- a/templates/accounts/index.html.twig
+++ b/templates/accounts/index.html.twig
@@ -1,5 +1,39 @@
-{% extends 'Components/Layout/index.html.twig' %}
+{% extends 'Components/Layout/crud-manage.html.twig' %}
 
 {% block page_content %}
     {{ parent() }}
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+
+    <script src="{{ asset('assets/js/account.js') }}"></script>
+
+    <script>
+        $(document).ready(function() {
+            let swalFormOptionsText = {
+                create: {
+                    confirmButtonText: '{{ 'Create'|trans }}',
+                    titleText: '{{ 'Create new'|trans }} {{ entity_name|trans|title }}',
+                    toastTitleText: '{{ entity_name|trans|title }} {{ 'was created successfully.'|trans }}'
+                },
+                update: {
+                    confirmButtonText: '{{ 'Update'|trans }}',
+                    titleText: '{{ 'Update'|trans }} {{ entity_name|trans|title }}',
+                    toastTitleText: '{{ entity_name|trans|title }} {{ 'was updated successfully.'|trans }}'
+                },
+                delete: {
+                    toastTitleText: '{{ entity_name|trans|title }} {{ 'was deleted successfully.'|trans }}'
+                }
+            };
+
+            const form = new AccountForm(swalFormOptionsText);
+
+            window.crudManager.withForm(form);
+            window.crudManager.withCreateButton();
+            window.crudManager.withEditButton();
+            window.crudManager.withDeleteButton();
+
+        });
+    </script>
 {% endblock %}
