Create stock market section
Stock market section was created with crud-manager table. Create, edit and remove is enable.

--- a/templates/Components/Layout/crud-manage.html.twig
+++ b/templates/Components/Layout/crud-manage.html.twig
@@ -211,7 +211,7 @@
             };
 
             // Create CRUDManage instance @see public/assets/js/crud-manage.js
-            window.crudManager = new CRUDManage('{{ entity_name|lower }}', contentWrapper, swalFormOptions, swalConfirmOptions, toastOptions);
+            window.crudManager = new CRUDManage('{{ entity_name|snake }}', contentWrapper, swalFormOptions, swalConfirmOptions, toastOptions);
         });
     </script>
 {% endblock %}
