--- a/templates/accounts/index.html.twig
+++ b/templates/accounts/index.html.twig
@@ -7,7 +7,7 @@
 {% block javascripts %}
     {{ parent() }}
 
-    <script src="{{ asset('assets/js/account.js') }}"></script>
+    <script src="{{ asset('build/account_from.js') }}"></script>
 
     <script>
         $(document).ready(function() {
