--- a/templates/stock_market/index.html.twig
+++ b/templates/stock_market/index.html.twig
@@ -34,7 +34,7 @@
     <!-- select2 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 
-    <script src="{{ asset('assets/js/stock_market.js') }}"></script>
+    <script src="{{ asset('build/stock_market_form.js') }}"></script>
 
     <script>
         $(document).ready(function() {
