--- a/templates/transfer/index.html.twig
+++ b/templates/transfer/index.html.twig
@@ -40,8 +40,7 @@
     <!-- select2 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 
-    <script src="{{ asset('assets/js/select2-account.js') }}"></script>
-    <script src="{{ asset('assets/js/transfer.js') }}"></script>
+    <script src="{{ asset('build/transfer_form.js') }}"></script>
 
     <script>
         $(document).ready(function() {
@@ -62,7 +61,6 @@
             };
 
             const form = new TransferForm(swalFormOptionsText);
-            form.withSelect2AccountTemplate(new Select2AccountTemplate());
 
             window.crudManager.withForm(form);
             window.crudManager.withCreateButton();
