Add sass loader
- Move all assets out of the public folder.
- Rename all css files to scss to enable sass.
- Install webpack sass loader and config webpack.
- Move import css from js files to scss files

--- a/assets/css/crud_manager.scss
+++ b/assets/css/crud_manager.scss
@@ -1,4 +1,6 @@
-<!-- swal -->
+@import "~sweetalert2/dist/sweetalert2.css";
+
+// swal
 .swal2-confirm-title, .swal2-form-title {
     font-size: 2.875em !important;
 }
