--- a/assets/css/stock_market_form.scss
+++ b/assets/css/stock_market_form.scss
@@ -1,3 +1,5 @@
+@import "~select2/dist/css/select2.css";
+
 .select2-container .select2-selection--single {
     height: 34px;
     text-align: left;
