--- a/assets/css/transfer_from.scss
+++ b/assets/css/transfer_from.scss
@@ -1,3 +1,6 @@
+@import "~select2/dist/css/select2.css";
+@import "~eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css";
+
 .select2-container .select2-selection--single {
     height: 34px;
     text-align: left;
