Optimization webpack to include only once time the libraries.

--- a/templates/Components/Layout/crud-manage.html.twig
+++ b/templates/Components/Layout/crud-manage.html.twig
@@ -94,6 +94,7 @@
     <script src="{{ asset('bundles/fosjsrouting/js/router.min.js') }}"></script>
     <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
 
+    <script src="{{ asset('build/vendors.js') }}"></script>
     <script src="{{ asset('build/crud_manager.js') }}"></script>
 
     <!-- form table manager template -->
